# data-encryption-standard-algorithm

./: Cargo.toml  LICENSE  README.md
api/: Cargo.toml
api/src/: main.rs
api/src/routes/: decryption.rs  encryption.rs  mod.rs
client/src/app/: layout.tsx  page.tsx
src/: lib.rs  main.rs
src/constants/: shift.rs
src/utils/: key_gen.rs  mod.rs  permutations.rs  sboxes.rs
