[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
rocket = "0.4.10"
rocket_contrib = "0.4.10"
serde = { version = "1", features = ["derive"] }
[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]